Source/WebCore/html/HTMLElement.h
@@ -105,7 +105,6 @@ public:
     virtual bool isHTMLUnknownElement() const { return false; }
 
     virtual bool isLabelable() const { return false; }
-    virtual bool isFocusableByClickOnLabel() const;
 
 protected:
     HTMLElement(const QualifiedName& tagName, Document*, ConstructionType);
